Quick CSS fix to prevent rows in Image selector from being cut off.  EUCA-7828

--- a/static/css/eucalyptus.css
+++ b/static/css/eucalyptus.css
@@ -2898,6 +2898,7 @@ span.on-error {
 
 .image-type {
   padding-left: 60px;
+  min-height: 60px;
   background-repeat: no-repeat;
   background-image: url(../images/images-icon-sprites.png);
 }
